--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -14,7 +14,7 @@
         ul.post-list li:last-child{
             margin-right: 0;
         }
-
+        
         ul.post-list li div{
             border:2px solid #f8f8f8;
             padding: 10px;
@@ -29,20 +29,21 @@
     <h1>Bienvenido a Wordplease</h1>
     <p>Wordplease es como Wordpress, pero en friki</p>
 
-    <!-- Si hay blogs, los listamos -->
-    {% if blog_list|length > 0 %}
-        <h2>Listado de blogs</h2>
+    {% if post_list|length > 0 %}
+        <h2>Últimos posts publicados</h2>
         <ul class="post-list">
-        {% for blog in blog_list %}
+        {% for post in post_list %}
             <li>
                 <div>
-                    <h4>{{ blog }}</h4>
-                    <p>Creado el {{ blog.created_at}}</p>
+                    <img src="{{ post.imageUrl }}" alt="{{ post.title }}" height="150">
+                    <h4>{{ post.title }}</h4>
+                    <p>Publicado por {{ post.blog.owner.first_name}} {{ post.blog.owner.last_name}} en el blog <strong>{{ post.blog.owner}}</strong></p>
+                    <p>{{ post.published_at}}</p>
                 </div>
             </li>
         {% endfor %}
     {% else %}
-        ¡Sé el primero en crear un blog!
+        ¡Sé el primero en publicar un post!
     {% endif %}
     </ul>
 </body>
