--- a/blogs/templates/blogs/detail.html
+++ b/blogs/templates/blogs/detail.html
@@ -19,6 +19,7 @@
             border:2px solid #f8f8f8;
             padding: 10px;
             text-align: center;
+            width: 300px;
         }
         ul.post-list li div h4{
             text-align: center;
@@ -26,18 +27,19 @@
     </style>
 </head>
 <body>
-    <h1>Detalle de blog</h1>
-    <p>Listado de posts para el blog <strong>{{ blog }}</strong></p>
+    <h1>Detalle del blog {{ blog }}</h1>
     {% if post_list|length > 0 %}
         <h2>Últimos posts publicados</h2>
         <ul class="post-list">
         {% for post in post_list %}
             <li>
                 <div>
-                    <img src="{{ post.imageUrl }}" alt="{{ post.title }}" height="150">
-                    <h4>{{ post.title }}</h4>
-                    <p>Publicado por {{ post.blog.owner.first_name}} {{ post.blog.owner.last_name}}</p>
-                    <p>{{ post.published_at }}</p>
+                    <h4><a href="../posts/{{ post.pk }}">{{ post.title }}</a></h4>
+                    {% if post.imageUrl|length > 0 %}
+                    <img src="{{ post.imageUrl }}" alt="{{ post.title }}" width="280">
+                    {% endif %}
+                    <p>{{ post.summary }}</p>
+                    <p>{{ post.published_at}}</p>
                 </div>
             </li>
         {% endfor %}
