--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -19,6 +19,7 @@
             border:2px solid #f8f8f8;
             padding: 10px;
             text-align: center;
+            width: 300px;
         }
         ul.post-list li div h4{
             text-align: center;
@@ -35,9 +36,11 @@
         {% for post in post_list %}
             <li>
                 <div>
-                    <img src="{{ post.imageUrl }}" alt="{{ post.title }}" height="150">
-                    <h4>{{ post.title }}</h4>
-                    <p>Publicado por {{ post.blog.owner.first_name}} {{ post.blog.owner.last_name}} en el blog <strong>{{ post.blog.owner}}</strong></p>
+                    <h4><a href="posts/{{ post.pk }}">{{ post.title }}</a></h4>
+                    {% if post.imageUrl|length > 0 %}
+                    <img src="{{ post.imageUrl }}" alt="{{ post.title }}" width="280">
+                    {% endif %}
+                    <p>{{ post.summary }}</p>
                     <p>{{ post.published_at}}</p>
                 </div>
             </li>
