Created new app called <users> to implement login and logout processes by means of django login and logout methods. In logout the user will be de-authenticated and then redirected to home. In login, error messages will be displayed in case of invalid credentials. User will be redirected to home after successfully logged in.

--- a/wordplease/templates/base.html
+++ b/wordplease/templates/base.html
@@ -33,6 +33,12 @@
 <body>
     <nav>
         <a href="{% url 'post_home' %}">Home</a>
+        |
+        {% if user.is_authenticated %}
+            <a href="{% url 'user_logout' %}">Salir</a>
+        {% else %}
+            <a href="{% url 'user_login' %}">Entrar</a>
+        {% endif %}
     </nav>
     <hr>
     <section>
