--- a/wordplease/templates/base.html
+++ b/wordplease/templates/base.html
@@ -35,6 +35,8 @@
         <a href="{% url 'post_home' %}">Home</a>
         |
         {% if user.is_authenticated %}
+            <a href="{% url 'post_create' %}">Crear post</a>
+            |
             <a href="{% url 'user_logout' %}">Salir</a>
         {% else %}
             <a href="{% url 'user_login' %}">Entrar</a>
