--- a/wordplease/templates/base.html
+++ b/wordplease/templates/base.html
@@ -37,6 +37,8 @@
         {% if user.is_authenticated %}
             <a href="{% url 'post_create' %}">Crear post</a>
             |
+            <a href="{% url 'post_list' %}">Mis posts</a>
+            |
             <a href="{% url 'user_logout' %}">Salir</a>
         {% else %}
             <a href="{% url 'user_login' %}">Entrar</a>
