Replaced Post.published_at field to manage a post visibility. If empty, the post is not published and therefore not displayed to guests or users who are not the post owner. Implemented content displayed regarding the user (superuser, authenticated user, or guest).

--- a/posts/templates/posts/post_loop.html
+++ b/posts/templates/posts/post_loop.html
@@ -8,7 +8,12 @@
             <img src="{{ post.imageUrl }}" alt="{{ post.title }}" width="280">
             {% endif %}
             <p>{{ post.summary }}</p>
-            <p>{{ post.published_at}}</p>
+
+            {% if post.published_at %}
+            <p>Publicado el {{ post.published_at}}</p>
+            {% else %}
+            <p>Creado el {{ post.created_at}}</p>
+            {% endif %}
         </div>
     </li>
 {% endfor %}
