--- a/wordplease/templates/base.html
+++ b/wordplease/templates/base.html
@@ -1,7 +1,10 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
     <title>
         {% block title %}
         Bienvenido a Wordplease - Como Wordpress, pero en friki
