--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -15,7 +15,11 @@
     </div>
     <ul>
         <li><strong>Autor: </strong>{{ post.blog.owner.first_name}} {{ post.blog.owner.last_name}}</li>
+        {% if post.published_at %}
         <li><strong>Publicado: </strong>{{ post.published_at }}</li>
+        {% else %}
+        <li><strong>Creado: </strong>{{ post.created_at }}</li>
+        {% endif %}
         <li><strong>Blog: </strong><a href="{% url 'blog_posts' post.blog %}">{{ post.blog.owner }}</a></li>
         <li>
             <strong>Categorías: </strong>
