--- a/wordplease/templates/base.html
+++ b/wordplease/templates/base.html
@@ -40,8 +40,7 @@
         {% if user.is_authenticated %}
             <a href="{% url 'post_create' %}">Crear post</a>
             |
-            <a href="{% url 'post_list' %}">Mis posts</a>
-
+            <a href="{% url 'blog_posts' user %}">Mis posts</a>
 
             <a style="float: right;" href="{% url 'user_logout' %}">Salir</a>
             <span style="float: right; margin-right: 10px">¡Hola, <strong>{{ user.first_name }} {{ user.last_name }}</strong>! </span>
